# open-dis-python

./: .env  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  build.xml  docker-compose.yml  pyproject.toml  pythonDis.py  quicktest.py  setup  setup.py
.github/workflows/: build_test.yml  ci.yml  test-report.yml
ci/: auto-bump.sh  compose.override.yml  docker-compose.yml
dis/: __init__.py  abstract_iffpdu_layer_data.py  acknowledge_pdu.py  acknowledge_reliable_pdu.py  acknowledge_rpdu.py  acoustic_emitter.py  action_request_pdu.py  action_request_reliable_pdu.py  action_request_rpdu.py  action_response_pdu.py  action_response_reliable_pdu.py  action_response_rpdu.py  aggregate_identifier.py  aggregate_marking.py  aggregate_state_pdu.py  aggregate_type.py  angle_deception.py  angular_velocity_vector.py  antenna_location.py  apa.py  appearance.py  appearance_pdu.py  areal_object_state_pdu.py  articulated_part_vp.py  articulated_parts_pdu.py  association.py  attached_part_vp.py  attribute.py  attribute_pdu.py  attribute_record_set.py  beam_antenna_pattern.py  beam_data.py  beam_status.py  blanking_sector.py  change_options.py  clock_time.py  collision_elastic_pdu.py  collision_pdu.py  comment_pdu.py  comment_reliable_pdu.py  (+214 more)
dis/utils/: PduFactory.py  RangeCoordinates.py  __init__.py
dis_network_example/: __init__.py  dis_receiver.py  dis_udp.py
distributed_interactive_simulation/: PduFactory.py  RangeCoordinates.py  dis7.py
docker/: Dockerfile
docs/: index.html
examples/: dis_dead_reckoning.py  dis_receiver.py  dis_sender.py
examples/dis-logger/: app.py  main.py
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/private/: private.properties
opendis/: DataInputStream.py  DataOutputStream.py  DeadReckoning.py  PduFactory.py  RangeCoordinates.py  __init__.py  bitfield.py  dis7.py  misc.py  pythonDis.py  record.py  stream.py  types.py
siso/: TODO.md  __init__.py  acronym.py  designator.py  dis.py  emission.py  emitter.py  envprocess.py  grid.py  iff.py  io.py  logistics.py  management.py  minefield.py  object.py  pdu.py  radiocomm.py  record.py  sensortype.py  siman.py  ua.py  warfare.py
tests/: ElectromagneticEmissionPdu-single-system.raw  EntityStatePdu-26.raw  SetDataPdu-multi-variable-datums.raw  SetDataPdu-vbs-script-cmd.raw  SignalPdu.raw  TransmitterPdu.raw  testElectromageneticEmissionPdu.py  testEntityStatePdu.py  testRangeCoordinates.py  testSetDataPdu.py  testSignalPdu.py  testTransmitterPdu.py  test_ElectromageneticEmissionPdu.py  test_EntityStatePdu.py  test_SignalPdu.py  test_TransmitterPdu.py  test_dead_reckoning.py  test_examples.py
(+869 files in other folders)
