[project]
name = "opendis"
version = "1.1.0a4"
description='implementation of DIS, IEEE-1278.1'
authors = [
    {name="Don McGregor", email="mcgredo@nps.edu"},
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
repository = 'https://github.com/open-dis/open-dis-python'
documentation = "https://open-dis.org/"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator"
 ]
 dependencies = [
    "numpy (>=1.26.4,<3.0)",
 ]


[tool.poetry.group.dev.dependencies]
black = ">=24.0.0"
isort = ">=5.13.2"
commitizen = ">=3.13.0"
flake8 = ">=7.0.0"
flake8-bugbear = "^24.8.0"
flake8-print = "^5.0.0"
flake8-docstrings = "^1.7.0"
flake8-docstrings-complete = "^1.3.0"
docformatter = {extras = ["tomli"], version = "^1.7.5"}
pytest = "^8"
pytest-cov = "^4"


[tool.commitizen]
version = "1.1.0a4"
update_changelog_on_bump = false
changelog_merge_prerelease = false
bump_message = "bump: $current_version → $new_version"
version_files = [
    "pyproject.toml:^version",
    ".env:^version"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
